@@ -7,6 +7,7 @@
     using flag --describe (see http://cTuning.org/ae), i.e.
     ck add repo:my-artifact-pack --describe
   * return 16 when adding new entry (including repository) and it already exists
+  * added often used 'load_yaml_file' and 'save_yaml_to_file' functions to kernel
 
 * V1.7.1
   * fixing detection of CK installation even when ck is soft linked
